<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pebble Go!</string>
  


    <string name="Welcome"> Please, enter your current location and destination to get real-time directions sent to your pebble watch.</string>
    <string name="DirectionHint">7470, rue Lajeunesse, Montreal</string>
    <string name="currentLocation">A- Current Location</string>
    <string name="Destination">B- Destination</string>
    <string name="Send">Go!</string>

    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">Pebble Go!</string>
    <string name="start">77 Massachusetts Ave  Cambridge, MA 02139</string>
    <string name="bu">1 Silber Way  Boston, MA 02215</string>

</resources>
