<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="35dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:text="@string/Welcome"
        android:layout_alignParentTop="true" />
    
    <TextView
        android:id="@+id/start_position_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentLocation"
        android:layout_below="@id/Welcome" />

    <EditText
        android:id="@+id/Start_position_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_position_text"
        android:hint="@string/DirectionHint" />

    <TextView
        android:id="@+id/destination_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Start_position_input"
        android:layout_marginTop="30dp"
        android:text="@string/Destination" />
    
    
    <EditText
        android:id="@+id/destination_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/destination_text"
        android:hint="@string/DirectionHint" />

    <Button
        android:id="@+id/Send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="78dp"
        android:text="@string/Send" />

</RelativeLayout>